tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/unbraced-for-body.wyst
module demo
fn main() { for index in 0 ..< 1 return }
